--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tools Portal</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
 <style>
 :root{
@@ -22,12 +22,12 @@
 }
 
 body{
-  background:#fff;
+  background:#ffffff;
   color:var(--text);
   overflow-x:hidden;
 }
 
-/* ナビバー */
+/* ガラスナビバー */
 nav{
   position:fixed;
   top:0;
@@ -48,86 +48,42 @@ nav.scrolled{
   background:rgba(255,255,255,0.95);
 }
 
-/* ヒーロー */
-.hero{
-  height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  padding:0 20px;
-  background:radial-gradient(circle at 50% 30%, #f2f2f7 0%, #ffffff 60%);
-}
-
-.hero h1{
-  font-size:clamp(42px,6vw,80px);
-  font-weight:700;
-  letter-spacing:-2px;
-  line-height:1.1;
-  opacity:0;
-  transform:translateY(40px);
-  transition:1.2s cubic-bezier(.16,1,.3,1);
-}
-
-.hero p{
-  margin-top:25px;
-  font-size:22px;
-  color:var(--sub);
-  opacity:0;
-  transform:translateY(30px);
-  transition:1.4s cubic-bezier(.16,1,.3,1);
-}
-
-.hero.show h1,
-.hero.show p{
-  opacity:1;
-  transform:translateY(0);
-}
-
-/* セクション */
+/* メインエリア */
 .section{
-  padding:180px 20px;
+  padding:200px 20px 160px;
   max-width:1200px;
   margin:auto;
-  text-align:center;
 }
 
-.section h2{
-  font-size:42px;
-  font-weight:700;
-  letter-spacing:-1px;
-  margin-bottom:80px;
-}
-
-/* カード */
 .cards{
   display:grid;
-  gap:60px;
+  gap:80px;
   grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
 }
 
+/* カード */
 .card{
   position:relative;
-  padding:60px;
-  border-radius:36px;
+  padding:80px;
+  border-radius:40px;
   background:#f5f5f7;
   text-decoration:none;
   color:inherit;
   overflow:hidden;
-  transition:.6s cubic-bezier(.16,1,.3,1);
+  transition:.7s cubic-bezier(.16,1,.3,1);
   opacity:0;
-  transform:translateY(60px);
+  transform:translateY(80px);
 }
 
 .card h3{
-  font-size:28px;
+  font-size:30px;
   font-weight:600;
+  letter-spacing:-0.5px;
 }
 
 .card p{
-  margin-top:18px;
-  font-size:17px;
+  margin-top:20px;
+  font-size:18px;
   color:var(--sub);
 }
 
@@ -137,8 +93,8 @@ nav.scrolled{
   position:absolute;
   top:var(--y);
   left:var(--x);
-  width:400px;
-  height:400px;
+  width:500px;
+  height:500px;
   background:radial-gradient(circle, rgba(255,255,255,0.6) 0%, transparent 60%);
   transform:translate(-50%,-50%);
   pointer-events:none;
@@ -151,8 +107,8 @@ nav.scrolled{
 }
 
 .card:hover{
-  transform:scale(1.03);
-  box-shadow:0 40px 80px rgba(0,0,0,.12);
+  transform:scale(1.04);
+  box-shadow:0 50px 100px rgba(0,0,0,.15);
 }
 
 .card.show{
@@ -163,7 +119,7 @@ nav.scrolled{
 /* フッター */
 footer{
   text-align:center;
-  padding:100px 20px;
+  padding:120px 20px 60px;
   color:var(--sub);
   font-size:14px;
 }
@@ -174,27 +130,22 @@ footer{
 
 <nav>Tools Portal</nav>
 
-<section class="hero">
-  <h1>計算を、美しく。</h1>
-  <p>業務効率を次のレベルへ。</p>
-</section>
-
 <section class="section">
-  <h2>プロフェッショナルツール</h2>
 
   <div class="cards">
 
     <a href="https://blanket38.github.io/kairicalc/" target="_blank" class="card">
       <h3>週次 予測・結果 乖離計算</h3>
-      <p>予測値と実績値の差を可視化し、迅速な意思決定を支援します。</p>
+      <p>予測値と実績値の差計算。</p>
     </a>
 
     <a href="https://blanket38.github.io/sintyokucalc/" target="_blank" class="card">
       <h3>進捗時間計算ツール</h3>
-      <p>進捗データから必要時間をスマートに算出します。</p>
+      <p>進捗データから必要時間を算出</p>
     </a>
 
   </div>
+
 </section>
 
 <footer>
@@ -206,11 +157,6 @@ footer{
 window.addEventListener("scroll",()=>{
   document.querySelector("nav")
   .classList.toggle("scrolled",window.scrollY>30);
-});
-
-// ヒーロー表示
-window.addEventListener("load",()=>{
-  document.querySelector(".hero").classList.add("show");
 });
 
 // スクロール表示
